--- a/packages/trackerless-network/tsconfig.jest.json
+++ b/packages/trackerless-network/tsconfig.jest.json
@@ -1,15 +1,16 @@
 {
     "extends": "../../tsconfig.jest.json",
     "compilerOptions": {
-        "outDir": "dist"
+        "outDir": "dist",
+        "noImplicitOverride": false
     },
     "include": [
         "src/**/*",
         "test/**/*"
     ],
-    "exclude": [
-    ],
     "references": [
-        { "path": "tsconfig.node.json" }
+        { "path": "../protocol/tsconfig.node.json" },
+        { "path": "../proto-rpc/tsconfig.node.json" },
+        { "path": "../dht/tsconfig.node.json" }
     ]
 }
